--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "next": "15.5.4",
-    "lucide-react": "^0.544.0"
+    "lucide-react": "^0.544.0",
+    "framer-motion": "^12.23.22"
   },
   "devDependencies": {
     "typescript": "^5",
